--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@next/mdx": "^14.1.0",
     "@react-three/drei": "^9.96.1",
     "@react-three/fiber": "^8.15.16",
+    "@vercel/analytics": "^1.5.0",
     "framer-motion": "^11.0.3",
     "lucide-react": "^0.323.0",
     "next": "14.1.0",
